clear chat record

--- a/templates/index.html
+++ b/templates/index.html
@@ -671,6 +671,7 @@
 
       <div class="actions">
         <button id="send-btn">送出</button>
+        <button id="clear-btn" type="button">清除對話</button>
         <small id="status-text"></small>
       </div>
     </section>
